# simulated-sondes

./: .gitignore  CLAUDE.md  README.md  config.py  les_data.py  plot_multifractal.py  pyproject.toml  regrid.py  simulate.py  simulate_multifractal.py  sonde_physics.py
